# generative-ai-atlas

./: .gitignore  CONTRIBUTING.md  LICENSE-SUMMARY  README.md  THIRD-PARTY-LICENSES  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: code-scanning.yml  deploy-docs.yml
docs/: contributing.md  iframe-worker.js  index.md  roadmap.md
docs/fonts/: license.fira-code.txt  license.inter.txt
docs/js/: aws-amplify.min.js  extra.js
docs/stylesheets/: extra.css
docs/topics/1_0_generative_ai_fundamentals/1_1_core_concepts_and_terminology/: core_concepts_and_terminology.md
docs/topics/1_0_generative_ai_fundamentals/1_2_business_value_and_use_cases/: 1_2_business_value_and_use_cases.md
docs/topics/1_0_generative_ai_fundamentals/1_3_implementation_consideration_and_challenges/: 1_3_implementation_consideration_and_challenges.md
docs/topics/1_0_generative_ai_fundamentals/1_4_responsible_ai_principles_and_considerations/: 1_4_responsible_ai_principles_and_considerations_placeholder.md
docs/topics/1_0_generative_ai_fundamentals/1_5_evolution_and_current_state_of_generative_ai/: 1_5_evolution_and_current_state_of_generative_ai_placeholder.md
docs/topics/2_0_technical_foundations_and_patterns/: index.md
docs/topics/2_0_technical_foundations_and_patterns/2_1_key_primitives/: index.md
docs/topics/2_0_technical_foundations_and_patterns/2_2_types_of_generative_ai_models_and_capabilities/: 2_2_types_of_generative_ai_models_and_capabilities.md
docs/topics/2_0_technical_foundations_and_patterns/2_5_managing_hallucinations_and_guardrails/: hallucinations_and_guardrails.md
docs/topics/2_0_technical_foundations_and_patterns/2_6_model_evaluation_and_selection_criteria/: index.md  introduction_to_generative_AI_evaluations.md
docs/topics/2_0_technical_foundations_and_patterns/2_7_output_customization_taxonomy/: customization_taxonomy.md
docs/topics/3_0_architecture_and_design_patterns/: index.md
docs/topics/3_0_architecture_and_design_patterns/3_1_system_and_application_design_patterns_for_genai/: index.md
docs/topics/3_0_architecture_and_design_patterns/3_4_scalability_performance/: .gitignore  index.md
docs/topics/3_0_architecture_and_design_patterns/3_6_cost_optimization/: index.md
docs/topics/3_0_architecture_and_design_patterns/3_7_resilience_high_availability/: resilience.md
docs/topics/3_0_architecture_and_design_patterns/3_9_AIOps/: aiops_applicationbuilding.md  aiops_datamanagement.md  aiops_deployment.md  aiops_modeltuning.md  index.md
docs/topics/4_0_systematic_path_to_production_framework/: index.md
docs/topics/4_0_systematic_path_to_production_framework/4_1_business_strategy_value_creation/: index.md
docs/topics/4_0_systematic_path_to_production_framework/4_2_data_model_foundation/: index.md
docs/topics/4_0_systematic_path_to_production_framework/4_3_training_upskilling/: index.md
docs/topics/4_0_systematic_path_to_production_framework/4_4_governance/: index.md
docs/topics/4_0_systematic_path_to_production_framework/4_5_responsible_ai/: index.md
docs/topics/4_0_systematic_path_to_production_framework/4_6_sdlc/: index.md
docs/topics/4_0_systematic_path_to_production_framework/4_7_operations/: index.md
docs/topics/5_0_organization_adoption_framework/: index.md
docs/topics/5_0_organization_adoption_framework/5_1_vision_and_strategy/: 5_1_1_organizational_ai_vision.md  (+2 more)
docs/topics/7_0_resource_and_tools/: index.md
docs/topics/8_0_isv_focus/: index.md
hooks/: config_hook.py
mcp-server/: .gitignore  README.md  pyproject.toml
mcp-server/genai_atlas_mcp_server/: __init__.py  config.py  models.py  server.py
mcp-server/genai_atlas_mcp_server/tools/: __init__.py  get_reference_example.py  list_diagrams.py  list_topics.py  read_sections.py  read_topic.py  search.py
mcp-server/genai_atlas_mcp_server/utils/: __init__.py  fetcher.py  html_converter.py  search_index.py  topic_index.py  url_utils.py
mcp-server/tests/: __init__.py  test_html_converter.py  test_live_tools.py  test_search_index.py
overrides/: main.html
overrides/partials/: header.html  toc.html
scripts/: copyright-checker.py  cross-site-authentication-lint.py  fix-content-level.py  fix-image-references.py  fix-suggested-prereading.py  fix-tl-dr.py  rag.py
templates/: styles.scss
tests/: build_mkdocs  quality_check_docs.yml
(+141 files in other folders)
