[project]
name = "generative-ai-atlas"
version = "1.0.0"
description = "Generative AI ATLAS is your trusted generative AI knowledge hub that delivers current, expert-verified technical content for generative AI implementation. Find everything you need, no matter where you are on your journey, from foundational concepts to advanced implementations."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "babel==2.17.0",
    "backrefs==5.8",
    "beautifulsoup4==4.13.3",
    "cairocffi==1.7.1",
    "cairosvg==2.8.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cssselect2==0.8.0",
    "defusedxml==0.7.1",
    "fonttools==4.57.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "hjson==3.1.0",
    "html5lib==1.1",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "jinja2==3.1.6",
    "libsass==0.23.0",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markdownify==1.1.0",
    "markupsafe==3.0.2",
    "mdformat==0.7.22",
    "mdurl==0.1.2",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-git-revision-date-localized-plugin==1.4.7",
    "mkdocs-llmstxt==0.2.0",
    "mkdocs-macros-plugin==1.3.7",
    "mkdocs-material==9.6.8",
    "mkdocs-to-pdf==0.10.1",
    "packaging==24.2",
    "pathspec==0.12.1",
    "pillow==11.3.0",
    "pycparser==2.22",
    "pydyf==0.11.0",
    "pymdown-extensions==10.14.3",
    "pyphen==0.17.2",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "pyyaml-env-tag==0.1",
    "requests==2.32.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "soupsieve==2.6",
    "super-collections==0.5.3",
    "termcolor==2.5.0",
    "tinycss2==1.4.0",
    "tinyhtml5==2.0.0",
    "tomli==2.2.1",
    "typing-extensions==4.12.2",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
    "weasyprint==52.5",
    "webencodings==0.5.1",
]

[tool.uv]
override-dependencies = [
    "mkdocs-to-pdf==0.10.1; python_version >= '3.9'",
    "weasyprint==52.5; python_version >= '3.9'",
    "pydyf==0.11.0; python_version >= '3.9'"
]
